differentiate the gamma function

--- a/Chapter-2.ipynb
+++ b/Chapter-2.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import math"
+    "import math\n",
+    "from sympy import symbols,diff"
    ]
   },
   {
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,18 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calPrInDbm(Pt,Gl,Lambda,d):\n",
-    "    return Pt + (10*math.log(Gl,10)) +def calPrInDbm(Pt,Gl,Lambda,d):\n",
     "    return Pt + (10*math.log(Gl,10)) + (20*math.log(Lambda,10)) - (20*math.log(4*math.pi,10)) - (20*math.log(d,10)) (20*math.log(Lambda,10)) - (20*math.log(4*math.pi,10)) - (20*math.log(d,10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,17 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calPr(Pt,Gl,Lambda,d):\n",
-    "    return ((Pt * ((4*math.pi*d)**(-2)))/((math.sqrt(Gl)*Lambda))**(-2))"
+    "    return Pt + K - (10*Y*math.log(d/d0,10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def twoRayPtInDbm(Pr,Gl,ht,hr,d):\n",
+    "    return Pr - (10*math.log(Gl,10)) - (20*math.log(ht*hr,10)) + (20*math.log(4*math.pi,10)) + (20*math.log(d,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def twoRayPt(Pr,Gl,Lambda,d):\n",
+    "    return ((Pr * ((d)**(2)))/((math.sqrt(Gl)*ht*hr))**(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +224,129 @@
    "source": [
     "## Simplified Path Loss\n",
     "\n",
-    "Pr (dBm) = Pt (dBm) + K (dB) − 10γ log10(d/d0)"
+    "Pr (dBm) = Pt (dBm) + K (dB) − 10γ log10(d/d0)\n",
+    "\n",
+    "Pr = Pt * K * (d/d0)^γ\n",
+    "\n",
+    "K (dB) = −20 log10(4πd0/λ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcKinDb(d0,Lambda):\n",
+    "    return (-20*math.log10(((4*math.pi*d0)/Lambda)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simpPathLossPrInDbm(Pt,K,Y,d,d0):\n",
+    "    return Pt + K - (s10*Y*math.log(d/d0,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simpPathLossPtInDbm(Pr,K,Y,d,d0):\n",
+    "    return Pr - K + (10*Y*math.log(d/d0,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simpPathLossPr(Pt,K,Y,d,d0):\n",
+    "    return (Pt*K*((d/d0)**Y)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simpPathLossPt(Pr,K,Y,d,d0):\n",
+    "    return (Pr/(K*((d/d0)**Y)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mmodel(di) = K − 10γ log10(d) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gammaMinimizationFunction(x,y):\n",
+    "    Mmeasured = [-70,-75,-90,-110,-125]\n",
+    "    distances = [10,20,50,100,300]\n",
+    "    F=0\n",
+    "    Mmodel = []\n",
+    "    for di in distances:\n",
+    "        curr_M = y - 10*x*math.log(di,10)\n",
+    "        Mmodel.append(curr_M)\n",
+    "    for i in range(len(Mmeasured)):\n",
+    "        curr_val = (Mmeasured[i]-Mmodel[i])**2\n",
+    "        F+=curr_val\n",
+    "    return F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of K in Db is : \n",
+      "-31.52662237483517\n",
+      "Our cost function f(x,y) is =  6158.07099590172*(0.254863504098572*x - 1)**2 + 1480.20078588853*(0.259919991881845*x - 1)**2 + 8737.27232465667*(0.265008210642939*x - 1)**2 + 3419.13589089513*(0.290554449449974*x - 1)**2 + 1889.93456214018*(0.299270511456849*x - 1)**2\n",
+      "Partial Derivative wrt x is =  3143.06156716697*x - 11657.3941256352\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Example 2.3\n",
+    "\n",
+    "## M is the ration of Pr and Pt => in Db\n",
+    "## D0 is 1measuredK\n",
+    "\n",
+    "questionParams = {\n",
+    "    \"distanceFromTx\":[10,20,50,100,300],\n",
+    "    \"M\":[-70,-75,-90,-110,-125]\n",
+    "}\n",
+    "\n",
+    "f = 900*(10**6)\n",
+    "\n",
+    "## Calculate K\n",
+    "measuredK = calcKinDb(1,getLambda(f))\n",
+    "print(\"The value of K in Db is : \")\n",
+    "print(measuredK)\n",
+    "\n",
+    "## Calc Mmodel which is a list corresponding to the given M List\n",
+    "\n",
+    "a,b=symbols('x,y')\n",
+    "print('Our cost function f(x,y) is = ', gammaMinimizationFunction(a,measuredK))\n",
+    "print('Partial Derivative wrt x is = ', diff(gammaMinimizationFunction(a,measuredK),a))\n"
    ]
   },
   {
@@ -212,10 +354,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def simpPathLossPrInDbm(Pt,K,Y,d,d0):\n",
-    "    return Pt + (10*math.log(Gl,10)) + (20*math.log(ht*hr,10)) - (20*math.log(4*math.pi,10)) - (20*math.log(d,10))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
