--- a/Chapter-2.ipynb
+++ b/Chapter-2.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import math\n",
-    "from sympy import symbols,diff"
+    "from sympy import symbols,diff\n",
+    "from sympy.solvers import solve"
    ]
   },
   {
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,17 +244,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "def simpPathLossPrInDbm(Pt,K,Y,d,d0):\n",
-    "    return Pt + K - (s10*Y*math.log(d/d0,10))"
+    "    return Pt + K - (10*Y*math.log(d/d0,10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,17 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The value of K in Db is : \n",
-      "-31.52662237483517\n",
+      "The value of K in Db is : -31.52662237483517\n",
       "Our cost function f(x,y) is =  6158.07099590172*(0.254863504098572*x - 1)**2 + 1480.20078588853*(0.259919991881845*x - 1)**2 + 8737.27232465667*(0.265008210642939*x - 1)**2 + 3419.13589089513*(0.290554449449974*x - 1)**2 + 1889.93456214018*(0.299270511456849*x - 1)**2\n",
-      "Partial Derivative wrt x is =  3143.06156716697*x - 11657.3941256352\n"
+      "Partial Derivative wrt x is =  3143.06156716697*x - 11657.3941256352\n",
+      "[3.70892961417320]\n",
+      "Final answer for Y is : 3.70892961417320\n",
+      "The Pr measured in Dbm is : -112.236315513386\n"
      ]
     }
    ],
@@ -328,7 +331,7 @@
     "## Example 2.3\n",
     "\n",
     "## M is the ration of Pr and Pt => in Db\n",
-    "## D0 is 1measuredK\n",
+    "## D0 is 1\n",
     "\n",
     "questionParams = {\n",
     "    \"distanceFromTx\":[10,20,50,100,300],\n",
@@ -339,29 +342,70 @@
     "\n",
     "## Calculate K\n",
     "measuredK = calcKinDb(1,getLambda(f))\n",
-    "print(\"The value of K in Db is : \")\n",
-    "print(measuredK)\n",
+    "print(\"The value of K in Db is : {}\".format(measuredK))\n",
     "\n",
     "## Calc Mmodel which is a list corresponding to the given M List\n",
-    "\n",
     "a,b=symbols('x,y')\n",
     "print('Our cost function f(x,y) is = ', gammaMinimizationFunction(a,measuredK))\n",
-    "print('Partial Derivative wrt x is = ', diff(gammaMinimizationFunction(a,measuredK),a))\n"
+    "print('Partial Derivative wrt x is = ', diff(gammaMinimizationFunction(a,measuredK),a))\n",
+    "\n",
+    "res = solve(diff(gammaMinimizationFunction(a,measuredK),a),a)\n",
+    "print(res)\n",
+    "print(\"Final answer for Y is : {}\".format(res[0]))\n",
+    "\n",
+    "newGamma = res[0]\n",
+    "PtGiven = 0\n",
+    "dGiven = 150\n",
+    "\n",
+    "PrFound = simpPathLossPrInDbm(PtGiven,measuredK,newGamma,dGiven,1)  \n",
+    "print(\"The Pr measured in Dbm is : {}\".format(PrFound))  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## Variance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def getVariance(Y,K):\n",
+    "    Mmeasured = [-70,-75,-90,-110,-125]\n",
+    "    distances = [10,20,50,100,300]\n",
+    "    F=0\n",
+    "    Mmodel = []\n",
+    "    for di in distances:\n",
+    "        curr_M = K - 10*Y*math.log(di,10)\n",
+    "        Mmodel.append(curr_M)\n",
+    "    for i in range(len(Mmeasured)):\n",
+    "        curr_val = (Mmeasured[i]-Mmodel[i])**2\n",
+    "        F+=curr_val\n",
+    "    return F/len(Mmeasured)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variance is : 13.289442102176741\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Example 2.4\n",
+    "\n",
+    "print(\"Variance is : {}\".format(getVariance(3.71,-31.54)))"
+   ]
   },
   {
    "cell_type": "code",
