--- a/Chapter-2.ipynb
+++ b/Chapter-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -405,6 +405,123 @@
     "## Example 2.4\n",
     "\n",
     "print(\"Variance is : {}\".format(getVariance(3.71,-31.54)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Outage Probability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Q(z):\n",
+    "    return (0.5*math.erfc(z/(math.sqrt(2))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pr measured is : -110.27298571096577\n",
+      "The outage prob is : 0.5298463254304059\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Example 2.5\n",
+    "\n",
+    "Pmin = -110\n",
+    "\n",
+    "Pt_Given = 2 # in dbm\n",
+    "D_Given = 150\n",
+    "\n",
+    "standard_deviation = math.sqrt(getVariance(3.71,-31.54))\n",
+    "\n",
+    "print(\"Pr measured is : {}\".format(simpPathLossPrInDbm(Pt_Given,-31.54,3.71,D_Given,1)))\n",
+    "\n",
+    "OutageProb = 1 - (Q((Pmin - simpPathLossPrInDbm(Pt_Given,-31.54,3.71,D_Given,1))/(standard_deviation)))\n",
+    "\n",
+    "print(\"The outage prob is : {}\".format(OutageProb) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cell Coverage Area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def C(a,b):\n",
+    "    return Q(a) + (math.exp(((2-(2*a*b))/b**2))*Q((2-(a*b))/b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def FindA(Pmin,Prr,Sigma):\n",
+    "    return ((Pmin-Prr)/Sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def FindB(Y_IN,Sigma):\n",
+    "    return ((10*Y_IN*math.log10(math.e))/Sigma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prr found is -114.90821283913368\n",
+      "A is 1.3447158463379951\n",
+      "B is 4.41433569277004\n",
+      "Cell Coverage area is 0.57964454851737\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Example 2.6\n",
+    "\n",
+    "Pmin1 = -110\n",
+    "Pmin2 = -120\n",
+    "\n",
+    "Pt_dbm_given = 2\n",
+    "\n",
+    "PrrFound = simpPathLossPrInDbm(Pt_dbm_given,-31.54,3.71,200,1)\n",
+    "print(\"Prr found is {}\".format(PrrFound))\n",
+    "\n",
+    "print(\"A is {}\".format(FindA(Pmin1,PrrFound,3.65)))\n",
+    "print(\"B is {}\".format(FindB(3.71,3.65)))\n",
+    "print(\"Cell Coverage area is {}\".format(C(FindA(Pmin1,PrrFound,3.65),FindB(3.71,3.65))))"
    ]
   },
   {
